created the model

--- a/credit.ipynb
+++ b/credit.ipynb
@@ -3,6 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "cdd395a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from flask import Flask\n",
+    "\n",
+    "# app = Flask(__name__)\n",
+    "\n",
+    "# @app.route(\"/\")\n",
+    "# def hello_world():\n",
+    "#     return \"<p>Hello, World!</p>\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "b869777f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8dbee155",
    "metadata": {},
    "outputs": [],
@@ -24,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "cdfc72c0",
    "metadata": {},
    "outputs": [
@@ -216,7 +232,7 @@
        "4                1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bc7a44e9",
    "metadata": {},
    "outputs": [
@@ -255,7 +271,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b2f91b0b",
    "metadata": {},
    "outputs": [],
@@ -276,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8f92abec",
    "metadata": {},
    "outputs": [
@@ -304,7 +320,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d5d69d6b",
    "metadata": {},
    "outputs": [
@@ -338,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "13086b2b",
    "metadata": {},
    "outputs": [
@@ -412,7 +428,7 @@
        "4  5001712               0      C"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4e7d9f8a",
    "metadata": {
     "scrolled": true
@@ -438,7 +454,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "08f43ea1",
    "metadata": {},
    "outputs": [],
@@ -460,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "010955a0",
    "metadata": {},
    "outputs": [
@@ -664,7 +680,7 @@
        "4      C  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "7abf6ad5",
    "metadata": {},
    "outputs": [
@@ -691,7 +707,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "dc7f09ef",
    "metadata": {},
    "outputs": [
@@ -746,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "209e9e29",
    "metadata": {},
    "outputs": [
@@ -1014,7 +1030,7 @@
        "MONTHS_BALANCE      0.005288              NaN        -0.006276        1.000000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "c96e3b9c",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1051,7 @@
        "array(['C', '1', '0', 'X', '5', '4', '3', '2'], dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "c056f4bf",
    "metadata": {},
    "outputs": [],
@@ -1072,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "e5d5e76f",
    "metadata": {},
    "outputs": [],
@@ -1082,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "e6a4cf45",
    "metadata": {},
    "outputs": [
@@ -1103,7 +1119,7 @@
        "Name: STATUS, Length: 777715, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "19c98011",
    "metadata": {},
    "outputs": [
@@ -1318,7 +1334,7 @@
        "4       0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "b073b7bc",
    "metadata": {},
    "outputs": [],
@@ -1339,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "db724492",
    "metadata": {},
    "outputs": [
@@ -1351,7 +1367,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1363,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "04302b71",
    "metadata": {},
    "outputs": [],
@@ -1376,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "8a7c00dd",
    "metadata": {
     "scrolled": false
@@ -1582,7 +1598,7 @@
        "4                2              -4       0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1593,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "bee296b1",
    "metadata": {},
    "outputs": [
@@ -1645,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "c76f34b3",
    "metadata": {},
    "outputs": [],
@@ -1659,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "c1717081",
    "metadata": {},
    "outputs": [
@@ -1863,7 +1879,7 @@
        "777714                1        0.452597       0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1874,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "c05e6642",
    "metadata": {},
    "outputs": [
@@ -1896,7 +1912,7 @@
        "       -2.88494974])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1907,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "id": "46f07006",
    "metadata": {},
    "outputs": [
@@ -1967,7 +1983,7 @@
        "MONTHS_BALANCE            0.001831      -0.004222        1.000000"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1986,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "id": "b80e33f6",
    "metadata": {},
    "outputs": [],
@@ -1996,18 +2012,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 73,
    "id": "7d1ad5d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# x_train, x_test, y_train, y_test = train_test_split(x, y)\n",
     "\n",
-    "x = dataset[['CODE_GENDER', 'FLAG_OWN_CAR', 'FLAG_OWN_REALTY', 'NAME_INCOME_TYPE','NAME_EDUCATION_TYPE', 'NAME_FAMILY_STATUS', 'NAME_HOUSING_TYPE','AMT_INCOME_TOTAL','DAYS_EMPLOYED','MONTHS_BALANCE']]\n",
+    "x = dataset[['CODE_GENDER', 'FLAG_OWN_CAR', 'FLAG_OWN_REALTY', 'NAME_INCOME_TYPE','NAME_EDUCATION_TYPE', 'NAME_FAMILY_STATUS', 'NAME_HOUSING_TYPE','AMT_INCOME_TOTAL','DAYS_EMPLOYED','MONTHS_BALANCE']].values\n",
     "\n",
-    "y = dataset['STATUS']\n",
+    "y = dataset['STATUS'].values\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.20, random_state=0)"
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.20, random_state=42)"
    ]
   },
   {
@@ -2019,28 +2035,28 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2c77bde",
+   "cell_type": "markdown",
+   "id": "3b0eea70",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Logistic Regression"
+    "## Logistic Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 74,
    "id": "7f7e38af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_absolute_error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 75,
    "id": "23adc562",
    "metadata": {},
    "outputs": [],
@@ -2053,19 +2069,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 76,
    "id": "d62a3fc3",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9964768584892923"
+       "0.9965154330313803"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2076,15 +2092,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
+   "id": "9d04b928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = np.sqrt(mean_absolute_error(pred, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "4b1ec950",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05903022080781682"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "da9d8fe3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "5e3d4831",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('model.joblib', 'wb') as f:\n",
+    "    joblib.dump(model, f)\n",
+    "with open('model.joblib', 'wb') as f:\n",
+    "    joblib.dump(model, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "0d813b02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the prediction function - accepts input data and returns a prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "1b46efc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_json = {  'CODE_GENDER': 1,\n",
+    "                'FLAG_OWN_CAR': 1, \n",
+    "                'FLAG_OWN_REALTY': 1, \n",
+    "                'NAME_INCOME_TYPE': 4,\n",
+    "                'NAME_EDUCATION_TYPE': 4, \n",
+    "                'NAME_FAMILY_STATUS': 3, \n",
+    "                'NAME_HOUSING_TYPE': 4,x\n",
+    "                'AMT_INCOME_TOTAL': 427500,\n",
+    "                'DAYS_EMPLOYED': -4542,\n",
+    "                'MONTHS_BALANCE': 0\n",
+    "             }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "id": "335abb09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def return_prediction(model, input_json):\n",
+    "    \n",
+    "    input_data = [[input_json[k] for k in input_json.keys()]]\n",
+    "    prediction = model.predict(input_data)[0]\n",
+    "    \n",
+    "    return prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "d4f2554f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "return_prediction(model, input_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fe2df0c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "4d2aeaa8",
    "metadata": {},
    "outputs": [],
@@ -2094,40 +2230,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 38,
    "id": "e435f2ab",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9966182984769485"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import xgboost\n",
+    "# import xgboost\n",
     "\n",
-    "xg = xgboost.XGBClassifier()\n",
-    "xg.fit(x_train,y_train)\n",
-    "xg.score(x_test,y_test)"
+    "# xg = xgboost.XGBClassifier()\n",
+    "# xg.fit(x_train,y_train)\n",
+    "# xg.score(x_test,y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cd8e8a9c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 39,
    "id": "6494e210",
    "metadata": {},
    "outputs": [],
@@ -2137,28 +2254,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 40,
    "id": "1b22d550",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9962325530560681"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
+    "# from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "model = DecisionTreeClassifier(criterion='entropy',max_depth=4, random_state=0)\n",
-    "model.fit(x_train,y_train)\n",
-    "model.score(x_test,y_test)"
+    "# model = DecisionTreeClassifier(criterion='entropy',max_depth=4, random_state=0)\n",
+    "# model.fit(x_train,y_train)\n",
+    "# model.score(x_test,y_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e796d9db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c59238d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.model_selection import KFold\n",
+    "# from sklearn.model_selection import cross_val_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "bb952c7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# num_folds = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "8a494f79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# kfold = KFold(n_splits=num_folds, random_state=None)\n",
+    "# model = LogisticRegression(solver='lbfgs', max_iter=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "c3513553",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# results = cross_val_score(model, x, y, cv=kfold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "43b96891",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "1536688a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(\"Accuracy: %.25f%% (%.25f%%)\" % (results.mean()*100.0, results.std()*100.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77b12c14",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "2a1c2b22",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# from joblib import dump, load\n",
+    "\n",
+    "# dump(model, 'model.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cea4d1c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94ec7295",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
