--- a/credit.ipynb
+++ b/credit.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cdd395a4",
+   "id": "789e92c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2036,7 +2036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b0eea70",
+   "id": "2de90bec",
    "metadata": {},
    "source": [
     "## Logistic Regression"
@@ -2093,7 +2093,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "9d04b928",
+   "id": "12ee8525",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2103,7 +2103,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "4b1ec950",
+   "id": "dfd1098c",
    "metadata": {},
    "outputs": [
     {
@@ -2124,7 +2124,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "da9d8fe3",
+   "id": "fe941600",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2134,7 +2134,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "5e3d4831",
+   "id": "8701f5a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2147,7 +2147,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "0d813b02",
+   "id": "10ae198f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2156,8 +2156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "1b46efc7",
+   "execution_count": 92,
+   "id": "4f3c7ddf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,7 +2167,7 @@
     "                'NAME_INCOME_TYPE': 4,\n",
     "                'NAME_EDUCATION_TYPE': 4, \n",
     "                'NAME_FAMILY_STATUS': 3, \n",
-    "                'NAME_HOUSING_TYPE': 4,x\n",
+    "                'NAME_HOUSING_TYPE': 4,\n",
     "                'AMT_INCOME_TOTAL': 427500,\n",
     "                'DAYS_EMPLOYED': -4542,\n",
     "                'MONTHS_BALANCE': 0\n",
@@ -2176,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 90,
    "id": "335abb09",
    "metadata": {},
    "outputs": [],
@@ -2191,8 +2191,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "d4f2554f",
+   "execution_count": 91,
+   "id": "ced8312c",
    "metadata": {},
    "outputs": [
     {
@@ -2201,7 +2201,7 @@
        "0"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2213,10 +2213,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fe2df0c",
+   "id": "51a245e2",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cf492d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO - work on various  models to choose the best one"
+   ]
   },
   {
    "cell_type": "code",
@@ -2277,7 +2287,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c59238d4",
+   "id": "584566d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2288,7 +2298,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "bb952c7c",
+   "id": "9da19fe4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2298,7 +2308,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "8a494f79",
+   "id": "e1d0c63c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2309,7 +2319,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c3513553",
+   "id": "75fc8ade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2319,7 +2329,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "43b96891",
+   "id": "a91171df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2329,7 +2339,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "1536688a",
+   "id": "091ed271",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2339,7 +2349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77b12c14",
+   "id": "fa393f15",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2347,7 +2357,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "2a1c2b22",
+   "id": "f96b1276",
    "metadata": {
     "scrolled": true
    },
@@ -2361,7 +2371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cea4d1c3",
+   "id": "0f185818",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2369,7 +2379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94ec7295",
+   "id": "ed95f891",
    "metadata": {},
    "outputs": [],
    "source": []
